Fix text wrapping issue on mobile

--- a/src/styles/2-layout/_calendar.scss
+++ b/src/styles/2-layout/_calendar.scss
@@ -8,6 +8,15 @@
             margin-top: 16px;
             font-size: 24px;
         }
+        .item {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+        }
+        .item > div {
+            margin-right: $x_1;
+        }
         li {
             list-style-type: none;
             list-style-position:inside;
